<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/clientList"
            android:title="ClientList" />
        <item
            android:id="@+id/home_customer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home_customer" />
        <item
            android:id="@+id/home_admin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home_admin" />
        <item
            android:id="@+id/service_customer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_service_customer" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/doggo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Doggo" />

        <item
            android:id="@+id/contact_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="ContactMe" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Profile" />
    </group>
</menu>